--- a/README
+++ b/README
@@ -8,6 +8,42 @@ The files are intended for **personal and club use**, allowing builders to print
 
 ## 📦 What’s Included
 
+### Track Dimensions
+#### Curves
+* R24 - ARON Ballast + track
+* R32 - Ballast + track
+* R40 - Ballast, Track is Lego standard
+* R56 - 4DBrix
+* R72 - 4DBrix
+* R88 - 4DBrix
+* R104 - Ballast + track
+* R120 - Ballast + track
+* R136 - Ballast + track
+* R152 - Ballast + track
+* R168 - Not Generated Yet
+* R184 - Not Generated Yet
+#### Straight
+* S4 - Not Generated Yet
+* S8 - Not Generated Yet
+* S16 - Lego Standard Track - 4DBrix Ballast
+#### Switches
+* R40 
+** Classic Single L - Lego Standard
+** Classic Single R - Lego Standard 
+** Double Cross Over - N/A
+** RailYard
+* R104
+** Single L - N/A
+** Single R - N/A
+** RailYard
+** Double Cross Over - N/A
+#### Intersections
+* Cross - N/A
+* Hex - 3 Track - N/A
+
+
+
+
 ### Ballast Files
 
 * Straight and curved ballast plates
