Fixed the stud line on layer 2

--- a/README
+++ b/README
@@ -10,12 +10,12 @@ The files are intended for **personal and club use**, allowing builders to print
 
 ### Track Dimensions
 #### Curves
-* R24 - ARON Ballast + track
+* R24 - ARON Ballast (https://www.printables.com/model/1515575-lego-compatible-r24-ballast-plate) + track 
 * R32 - Ballast + track
-* R40 - Ballast, Track is Lego standard
-* R56 - 4DBrix
-* R72 - 4DBrix
-* R88 - 4DBrix
+* R40 - Ballast (N/A), Track is Lego standard
+* R56 - 4DBrix (https://www.4dbrix.com/products/train/2-04-tracks/030/index.php)
+* R72 - 4DBrix (https://www.4dbrix.com/products/train/2-04-tracks/031/index.php)
+* R88 - 4DBrix (https://www.4dbrix.com/products/train/2-04-tracks/032/index.php)
 * R104 - Ballast + track
 * R120 - Ballast + track
 * R136 - Ballast + track
